# omi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
omi-macros/: Cargo.toml
omi-macros/src/: creatable.rs  deletable.rs  entity.rs  lib.rs  queryable.rs  updatable.rs  util.rs
omi_derives/: Cargo.toml
omi_derives/src/: entity.rs  lib.rs  queryable.rs
src/: builder.rs  database.rs  deserialize.rs  entity.rs  errors.rs  lib.rs  operations.rs  statement.rs  transaction.rs
src/driver/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/model/: column.rs  entity.rs  meta.rs  mod.rs  table.rs
src/operations/: creatable.rs  deletable.rs  mod.rs  queryable.rs  updatable.rs
src/statement/: delete_statement.rs  insert_statement.rs  mod.rs  raw_statement.rs  select_statement.rs  update_statement.rs
tests/: test_find.rs
