[package]
name = "omi"
version = "0.2.0"
repository = "https://github.com/amphitheatre-app/omi"
description = "Object Mapping Intelligently, A library that maps object structures to relational databases and provides interfaces for common queries and updates."
keywords = ["database", "async", "postgres", "mysql", "sqlite"]
categories = ["database", "asynchronous"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Eguo Wang <wang@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_query_builder = "1.0"
omi_derives = { path = "./omi_derives" }

[workspace]
members = [ "omi_derives" ]
